parameter reference stuff

--- a/dashboard/static/benchmark.html
+++ b/dashboard/static/benchmark.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="flex gap-3 text-[10px] text-gray-500 mb-2 px-1">
                         <span><span class="inline-block w-1.5 h-1.5 rounded-full bg-orange-400 mr-1"></span>Benchmark-only (not applied to service)</span>
-                        <span><span class="inline-block w-1.5 h-1.5 rounded-full bg-yellow-400 mr-1"></span>Serve param</span>
+                        <span><span class="inline-block w-1.5 h-1.5 rounded-full bg-yellow-400 mr-1"></span>Runtime param</span>
                     </div>
                     <div id="param-ref-list" class="overflow-y-auto space-y-0.5 text-xs">
                         <!-- Populated by JS -->
@@ -293,6 +293,7 @@ async function initPage() {
         console.error('Init error:', e);
     }
 
+    await loadParamReference();
     renderParamRef();
 }
 
@@ -319,82 +320,30 @@ initPage();
 new ResizeObserver(() => updateParamRefHeight()).observe(document.getElementById('left-column'));
 
 // ── Parameter Reference Data ───────────────────────────
-const PARAM_REFERENCE = [
-    // Benchmark-only flags first
-    { cat: 'Benchmark', flag: '-m', long: '--model', desc: 'Model file path (auto-added)', def: 'auto',
-      tip: 'Path to the GGUF model file. <b>Auto-added</b> from your service configuration — you don\'t need to set this manually.' },
-    { cat: 'Benchmark', flag: '-o', long: '--output', desc: 'Output format (auto-added as json)', def: 'json',
-      tip: 'Sets the output format for benchmark results. <b>Auto-added as json</b> so the dashboard can parse the results. You don\'t need to set this manually.' },
-    { cat: 'Benchmark', flag: '-p', long: '--n-prompt', desc: 'Number of prompt tokens to process', def: '512',
-      tip: 'Sets the number of tokens to process in the <b>prompt phase</b> (default: 512). This measures how quickly your system can ingest input before generation begins. Increase to test performance with larger prompts or longer context windows.' },
-    { cat: 'Benchmark', flag: '-n', long: '--n-gen', desc: 'Number of tokens to generate', def: '128',
-      tip: 'Specifies how many tokens to <b>generate</b> during the text generation phase (default: 128). This tests sequential token production speed, which determines response time. Higher values show sustained performance over longer outputs.' },
-    { cat: 'Benchmark', flag: '-r', long: '--repetitions', desc: 'Times to repeat each test', def: '5',
-      tip: 'Number of times to <b>repeat each test</b> (default: 5). Multiple runs provide statistical averaging to account for variance from thermal throttling, caching, or system load. Increase for more reliable comparisons.' },
-    { cat: 'Benchmark', flag: '-pg', long: '', desc: 'Combined prompt+generation (pp,tg)', def: '',
-      tip: 'Runs <b>prompt processing + text generation</b> in a single pass (format: <code>-pg 1024,256</code> for 1024 prompt + 256 generated tokens). The most realistic benchmark since it measures end-to-end inference like actual usage, rather than testing PP and TG separately.' },
-    { cat: 'Benchmark', flag: '-d', long: '--n-depth', desc: 'Context depth for KV cache prefill', def: '0',
-      tip: 'Sets how many tokens are already in the KV cache before the test runs. For example, <b>-d 4096</b> fills the cache with 4096 tokens first, then measures PP/TG speed. This lets you benchmark performance with a long conversation history, since attention slows down as context grows. Default is 0 (empty cache).' },
-    { cat: 'Benchmark', flag: '-oe', long: '--output-err', desc: 'Stderr output format', def: 'none',
-      tip: 'Directs benchmark output to <b>stderr</b> in specified format (<code>csv|json|jsonl|md|sql</code>). Use to separate diagnostic data from main results when piping stdout to files or databases.' },
-    { cat: 'Benchmark', flag: '-v', long: '--verbose', desc: 'Verbose output', def: 'off',
-      tip: 'Enables <b>detailed diagnostic logging</b> during test execution, showing model loading details, device configuration, and per-iteration metrics. Enable when troubleshooting performance issues or verifying test parameters.' },
-{ cat: 'Benchmark', flag: '', long: '--delay', desc: 'Delay in seconds between tests', def: '0',
-      tip: 'Introduces a <b>pause in seconds</b> between successive tests (default: 0). Allows GPU temperature to stabilize and caches to clear between runs. Add delay when thermal throttling might skew results.' },
-    { cat: 'Benchmark', flag: '', long: '--list-devices', desc: 'List available devices and exit', def: '',
-      tip: 'Displays all available <b>compute devices</b> (CPUs, GPUs, accelerators) compatible with your build, then exits. Use to verify hardware detection before configuring device-specific tests.' },
+let PARAM_REFERENCE = [];
 
-    { cat: 'Batching', flag: '-b', long: '--batch-size', desc: 'Logical batch size for prompt processing', def: '2048',
-      tip: '<b>Logical batch size</b> for prompt processing (default: 2048). Controls how many tokens are processed per iteration at the application level. Larger values speed up prompt processing but require more VRAM for the logits buffer. All prompt tokens are still evaluated — they\'re just chunked into groups of this size.' },
-    { cat: 'Batching', flag: '-ub', long: '--ubatch-size', desc: 'Physical micro-batch size', def: '512',
-      tip: '<b>Physical micro-batch size</b> at the hardware level (default: 512). When <code>batch > ubatch</code>, processing is pipelined (e.g., batch=2048 with ubatch=512 = 4-stage pipeline). Lower values reduce VRAM usage during prompt processing. Must satisfy: <code>batch_size >= ubatch_size</code>.' },
-
-    { cat: 'GPU', flag: '-ngl', long: '--gpu-layers', desc: 'Number of layers to offload to GPU', def: '99',
-      tip: 'Controls how many model layers are stored in VRAM. Use a specific number, <code>auto</code>, or <code>-1</code>/all to offload everything. <b>Higher values = faster inference but more VRAM.</b> Start with <code>auto</code> and adjust based on available memory.' },
-    { cat: 'GPU', flag: '-sm', long: '--split-mode', desc: 'Multi-GPU split mode (none|layer|row)', def: 'layer',
-      tip: 'Determines how models distribute across multiple GPUs. <code>none</code> = single GPU; <code>layer</code> (default) = sequential layer distribution; <code>row</code> = parallel tensor splitting where all GPUs work simultaneously per layer. <b>Use <code>row</code> for better multi-GPU utilization.</b>' },
-    { cat: 'GPU', flag: '-mg', long: '--main-gpu', desc: 'Primary GPU index for computations', def: '0',
-      tip: 'Specifies which GPU (by index, default: 0) handles primary processing. With <code>split-mode=none</code>, the entire model runs here. With <code>row</code> mode, this GPU manages intermediate results and KV cache. <b>Set to your fastest GPU.</b>' },
-    { cat: 'GPU', flag: '-nkvo', long: '--no-kv-offload', desc: 'Disable KV cache offload to GPU (0|1)', def: '0',
-      tip: 'Keeps the KV cache in system RAM instead of VRAM. By default, KV cache uses VRAM. <b>Enable if you\'re VRAM-constrained but have plenty of RAM</b> — trades GPU memory for slower CPU memory access.' },
-    { cat: 'GPU', flag: '-ts', long: '--tensor-split', desc: 'Fraction of work per GPU (comma-separated)', def: '0',
-      tip: 'Defines custom proportions for distributing model weights across GPUs (e.g., <code>3,1</code> = 75%/25% split). <b>Use when GPUs have different VRAM capacities</b> to allocate smaller portions to weaker GPUs and prevent bottlenecks.' },
-    { cat: 'GPU', flag: '-dev', long: '--device', desc: 'Device selection', def: 'auto',
-      tip: 'Specifies which compute devices to use as a comma-separated list. Set to <code>none</code> to disable offloading entirely. <b>Run with <code>--list-devices</code> first</b> to see available devices. Useful for mixed GPU/CPU setups.' },
-    { cat: 'GPU', flag: '', long: '--no-op-offload', desc: 'Disable operation offloading (0|1)', def: '0',
-      tip: 'Disables GPU acceleration for host tensor operations, forcing them onto CPU. <b>Enable only for debugging</b> or if you encounter GPU operation errors — it will significantly slow down inference.' },
-
-    { cat: 'Memory', flag: '-fa', long: '--flash-attn', desc: 'Enable flash attention (0|1)', def: '0',
-      tip: 'Enables flash attention, which reduces memory bandwidth and improves GPU performance through tiling and kernel fusion. <b>Enable (set to 1) when using GPU</b> for up to ~15% throughput gains and better long-context support. Required for KV cache quantization (<code>-ctk</code>/<code>-ctv</code>).' },
-    { cat: 'Memory', flag: '-ctk', long: '--cache-type-k', desc: 'KV cache type for K (f16, q8_0, q4_0, etc.)', def: 'f16',
-      tip: 'Data type for the <b>key</b> component of the KV cache (default: <code>f16</code>). Options: <code>f16</code>, <code>f32</code>, <code>q8_0</code>, <code>q4_0</code>. <b>Use <code>q8_0</code> to halve KV cache VRAM</b> with minimal quality loss — useful for long contexts or fitting more layers on GPU. Requires <code>-fa 1</code>.' },
-    { cat: 'Memory', flag: '-ctv', long: '--cache-type-v', desc: 'KV cache type for V (f16, q8_0, q4_0, etc.)', def: 'f16',
-      tip: 'Data type for the <b>value</b> component of the KV cache (default: <code>f16</code>). Options: <code>f16</code>, <code>f32</code>, <code>q8_0</code>, <code>q4_0</code>. <b>Use <code>q8_0</code> to halve KV cache VRAM</b> with minimal quality loss. Should typically match <code>-ctk</code> setting. Requires <code>-fa 1</code>.' },
-    { cat: 'Memory', flag: '', long: '--mmap', desc: 'Use memory-mapped model loading (0|1)', def: '1',
-      tip: 'Controls memory-mapped file loading (default: enabled). When on, the model maps directly from disk via the OS page cache, enabling <b>instant loads on subsequent runs</b>. Disable (set to 0) to force loading the full model into RAM upfront — useful if your model is larger than available RAM or you want consistent performance without page faults.' },
-    { cat: 'Memory', flag: '', long: '--embeddings', desc: 'Embeddings mode (0|1)', def: '0',
-      tip: 'Switches from text generation to <b>embedding generation</b> mode. Enable (set to 1) when benchmarking vector embedding performance for semantic search, similarity tasks, or RAG applications. Requires a model designed for embeddings.' },
-
-    { cat: 'CPU', flag: '-t', long: '--threads', desc: 'Number of threads for computation', def: 'auto',
-      tip: 'Number of CPU threads for computation (default: auto-detected core count). <b>Higher values improve performance on multi-core systems</b> but may cause diminishing returns beyond the optimal count. Experiment with values like 4, 8, 16, 32 to find the sweet spot for your hardware.' },
-    { cat: 'CPU', flag: '-C', long: '--cpu-mask', desc: 'CPU affinity bitmask', def: '0x0',
-      tip: 'CPU affinity bitmask in hex (default: <code>0x0</code> = unrestricted). <b>Restricts execution to specific CPU cores.</b> Example: <code>0xFF</code> pins to CPUs 0-7. Useful on NUMA systems or when running multiple workloads to reduce cross-socket memory access.' },
-    { cat: 'CPU', flag: '', long: '--cpu-strict', desc: 'Use strict CPU thread pinning (0|1)', def: '0',
-      tip: 'Enforces <b>strict thread-to-core binding</b> to reduce context switching (default: disabled). Most beneficial when combined with <code>--cpu-mask</code> for maximum performance isolation and predictability in multi-threaded environments.' },
-    { cat: 'CPU', flag: '', long: '--poll', desc: 'Polling percentage for thread sync', def: '50',
-      tip: 'Controls how aggressively threads <b>spin-check for new work</b> (0-100, default: 50). Higher values reduce latency but consume more CPU power. Lower values save power by using passive waiting. Tune based on your latency vs. power efficiency needs.' },
-    { cat: 'CPU', flag: '', long: '--numa', desc: 'NUMA scheduling (distribute|isolate|numactl)', def: 'disabled',
-      tip: 'NUMA scheduling mode: <code>distribute</code> (spread across all nodes), <code>isolate</code> (current node only), or <code>numactl</code> (use numactl CPU map). <b>Essential for multi-socket systems</b> to optimize memory access. <code>distribute</code> with memory interleave often provides the best throughput.' },
-    { cat: 'CPU', flag: '-ncmoe', long: '--n-cpu-moe', desc: 'CPU layers for MoE models', def: '0',
-      tip: 'Number of MoE layers to keep on CPU, counting from the <b>highest layer number</b> (default: 0). Offloads expert FFN layers to CPU to reduce VRAM usage on large MoE models. llama.cpp may still copy CPU weights to GPU for batch processing when enough tokens are available.' },
-
-    { cat: 'Other', flag: '', long: '--prio', desc: 'Process/thread priority (0-3)', def: '0',
-      tip: 'CPU scheduling priority: <code>-1</code> (low), <code>0</code> (normal), <code>1</code> (medium), <code>2</code> (high), <code>3</code> (realtime). Higher priorities allocate more CPU time to llama.cpp. Use <b>low for background benchmarking</b>, high for dedicated performance testing.' },
-    { cat: 'Other', flag: '', long: '--rpc', desc: 'RPC server addresses (comma-separated)', def: '',
-      tip: 'Enables distributed benchmarking across machines by specifying RPC server addresses (e.g., <code>192.168.1.10:50052,192.168.1.11:50052</code>). Model weights and KV cache are automatically distributed proportional to available memory. <b>Experimental — do not use on open networks.</b>' },
-    { cat: 'Other', flag: '-ot', long: '--override-tensors', desc: 'Override tensor buffer types', def: '',
-      tip: 'Fine-grained control over which device specific tensors load to, using regex patterns (e.g., <code>-ot ".*_exps.*=CPU"</code> or <code>-ot "blk.[0-5].*=CUDA0"</code>). Buffer types: <code>CPU</code>, <code>CUDA0</code>, <code>CUDA1</code>. <b>Essential for MoE models</b> to selectively offload expert layers while keeping attention on GPU.' },
-];
+async function loadParamReference() {
+    try {
+        const resp = await fetchAPI('/api/flag-metadata/llamacpp_bench');
+        if (!resp.ok) throw new Error(`HTTP ${resp.status}`);
+        const data = await resp.json();
+        const flags = data.optional_flags || {};
+        PARAM_REFERENCE = Object.values(flags).map(f => {
+            const isLong = f.cli.startsWith('--');
+            return {
+                cat:  f.category || 'Other',
+                flag: isLong ? '' : f.cli,
+                long: isLong ? f.cli : '',
+                desc: f.description || '',
+                def:  f.default || '',
+                tip:  f.tip || '',
+            };
+        });
+    } catch (e) {
+        console.error('Failed to load param reference:', e);
+        PARAM_REFERENCE = [];
+    }
+}
 
 // ── Parameter Management ───────────────────────────────
 function addParamRow(flag, value, isEmpty = false) {
